<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/ll_box_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_box_level_1"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:layout_centerInParent="true"
                android:textSize="12sp"
                android:textColor="@color/color_white"
                android:text="@string/str_box_level_1"
                android:background="@drawable/icon_box_level_bg">

            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_box_level_2"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:textSize="12sp"
                android:textColor="@color/color_white_50"
                android:text="@string/str_box_level_2"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_box_level_bg_noral">

            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_box_level_3"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:textSize="12sp"
                android:textColor="@color/color_white_50"
                android:text="@string/str_box_level_3"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_box_level_bg_noral">

            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_box_level_4"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:textSize="12sp"
                android:textColor="@color/color_white_50"
                android:text="@string/str_box_level_4"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_box_level_bg_noral">

            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_box_level_5"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:textSize="12sp"
                android:textColor="@color/color_white_50"
                android:text="@string/str_box_level_5"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_box_level_bg_noral">

            </Button>

        </RelativeLayout>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_level"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_box_level">
    </androidx.viewpager.widget.ViewPager>


</RelativeLayout>